--- a/.github/workflows/affix_cron.yml
+++ b/.github/workflows/affix_cron.yml
@@ -1,12 +1,53 @@
+name: Affix PDFs nightly
+
+on:
+  schedule:
+    # Meia-noite BRT = 03:00 UTC
+    - cron: '5 3 * * *'
+  workflow_dispatch:
+
+permissions:
+  contents: write
+
+jobs:
+  fetch:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Install deps
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
       - name: Run fetcher
         run: |
           python scripts/fetch_affix.py
 
       - name: List outputs (debug)
+        if: always()
         run: |
-          echo "--- MANIFEST ---"
-          test -f data/affix/manifest.json && cat data/affix/manifest.json || echo "manifest.json não existe"
-          echo "--- TREE ---"
+          echo '--- MANIFEST ---'
+          if [ -f "data/affix/manifest.json" ]; then cat data/affix/manifest.json; else echo 'manifest.json não existe'; fi
+          echo '--- TREE ---'
           ls -lahR data/affix || true
-          echo "--- GIT STATUS ---"
+          echo '--- GIT STATUS ---'
           git status --porcelain
+
+      - name: Commit changes (if any)
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add -A data/affix
+          if ! git diff --cached --quiet; then
+            git commit -m "chore(affix): nightly fetch $(date -u +'%Y-%m-%d %H:%M UTC')"
+            git push
+          else
+            echo "No changes to commit."
+          fi
