--- a/.github/workflows/affix_cron.yml
+++ b/.github/workflows/affix_cron.yml
@@ -3,8 +3,8 @@ name: Affix PDFs nightly
 on:
   schedule:
     # Meia-noite BRT = 03:00 UTC
-    - cron: '5 3 * * *'
-  workflow_dispatch:
+    - cron: "5 3 * * *"
+  workflow_dispatch: {}
 
 permissions:
   contents: write
@@ -12,6 +12,7 @@ permissions:
 jobs:
   fetch:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -19,7 +20,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: "3.11"
 
       - name: Install deps
         run: |
@@ -31,23 +32,24 @@ jobs:
           python scripts/fetch_affix.py
 
       - name: List outputs (debug)
-        if: always()
         run: |
-          echo '--- MANIFEST ---'
-          if [ -f "data/affix/manifest.json" ]; then cat data/affix/manifest.json; else echo 'manifest.json não existe'; fi
-          echo '--- TREE ---'
+          echo "--- MANIFEST ---"
+          test -f data/affix/manifest.json && cat data/affix/manifest.json || echo "manifest.json não existe"
+          echo "--- TREE ---"
           ls -lahR data/affix || true
-          echo '--- GIT STATUS ---'
+          echo "--- GIT STATUS ---"
           git status --porcelain
 
       - name: Commit changes (if any)
         run: |
+          set -e
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add -A data/affix
-          if ! git diff --cached --quiet; then
+          # adiciona SOMENTE o diretório data/affix (evita erro de pathspec que anulava o add)
+          git add -A data/affix || true
+          if git diff --cached --quiet; then
+            echo "No changes to commit."
+          else
             git commit -m "chore(affix): nightly fetch $(date -u +'%Y-%m-%d %H:%M UTC')"
             git push
-          else
-            echo "No changes to commit."
           fi
