--- a/.github/workflows/affix_cron.yml
+++ b/.github/workflows/affix_cron.yml
@@ -2,7 +2,7 @@ name: Affix PDFs nightly
 
 on:
   schedule:
-    # Meia-noite BRT = 03:00 UTC
+    # Meia-noite BRT ≈ 03:00 UTC
     - cron: "5 3 * * *"
   workflow_dispatch: {}
 
@@ -12,7 +12,6 @@ permissions:
 jobs:
   fetch:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -22,33 +21,39 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Install deps
+      - name: Install deps (pip)
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run fetcher
+      - name: Install system tools (tesseract + poppler)
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y tesseract-ocr poppler-utils
+
+      - name: Run fetcher (baixar/atualizar PDFs)
         run: |
           python scripts/fetch_affix.py
 
-      - name: List outputs (debug)
+      - name: Run OCR (thumb + texto do 1º slide)
         run: |
-          echo "--- MANIFEST ---"
-          test -f data/affix/manifest.json && cat data/affix/manifest.json || echo "manifest.json não existe"
-          echo "--- TREE ---"
-          ls -lahR data/affix || true
-          echo "--- GIT STATUS ---"
-          git status --porcelain
+          python scripts/ocr_affix.py
 
       - name: Commit changes (if any)
         run: |
-          set -e
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add -A data/affix || true
-          if git diff --cached --quiet; then
-            echo "No changes to commit."
-          else
-            git commit -m "chore(affix): nightly fetch $(date -u +'%Y-%m-%d %H:%M UTC')"
+          git add -A data/affix manifest* data/affix/manifest.json || true
+          if ! git diff --cached --quiet; then
+            git commit -m "chore(affix): nightly fetch & ocr $(date -u +'%Y-%m-%d %H:%M UTC')"
             git push
+          else
+            echo "No changes to commit."
           fi
+
+      - name: Debug tree (opcional)
+        run: |
+          echo "--- RAW ---"
+          ls -lah data/affix/raw || true
+          echo "--- OCR ---"
+          ls -lahR data/affix/ocr || true
