--- a/.github/workflows/affix_cron.yml
+++ b/.github/workflows/affix_cron.yml
@@ -1,10 +1,10 @@
 name: Affix PDFs nightly
 
 on:
+  workflow_dispatch:
   schedule:
-    # Meia-noite BRT ≈ 03:00 UTC
-    - cron: "5 3 * * *"
-  workflow_dispatch: {}
+    # 03:10 UTC ≈ 00:10 em Brasília (BRT). Ajuste se quiser outro horário.
+    - cron: '10 3 * * *'
 
 permissions:
   contents: write
@@ -19,19 +19,22 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
+          python-version: '3.11'
+          cache: 'pip'
 
-      - name: Install deps (pip)
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      - name: Install system tools (tesseract + poppler)
+      - name: Install system deps (OCR / PDF)
         run: |
           sudo apt-get update
           sudo apt-get install -y tesseract-ocr poppler-utils
 
-      - name: Run fetcher (baixar/atualizar PDFs)
+      - name: Install Python deps
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Run fetcher (coleta/atualiza PDFs)
+        env:
+          AFFIX_SOURCES_PATH: scripts/affix_sources.txt
         run: |
           python scripts/fetch_affix.py
 
@@ -39,21 +42,24 @@ jobs:
         run: |
           python scripts/ocr_affix.py
 
-      - name: Commit changes (if any)
+      - name: List outputs (debug)
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add -A data/affix manifest* data/affix/manifest.json || true
-          if ! git diff --cached --quiet; then
-            git commit -m "chore(affix): nightly fetch & ocr $(date -u +'%Y-%m-%d %H:%M UTC')"
+          echo "--- MANIFEST ---"
+          test -f data/affix/manifest.json && cat data/affix/manifest.json || echo "manifest.json não existe"
+          echo "--- TREE ---"
+          ls -lahR data/affix || true
+          echo "--- GIT STATUS ---"
+          git status --porcelain || true
+
+      - name: Commit & push changes (if any)
+        run: |
+          set -e
+          if [[ -n "$(git status --porcelain)" ]]; then
+            git config user.name  "github-actions[bot]"
+            git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+            git add -A
+            git commit -m "chore(affix): nightly fetch $(date -u +'%Y-%m-%d %H:%M UTC')"
             git push
           else
-            echo "No changes to commit."
+            echo "Sem mudanças para commitar."
           fi
-
-      - name: Debug tree (opcional)
-        run: |
-          echo "--- RAW ---"
-          ls -lah data/affix/raw || true
-          echo "--- OCR ---"
-          ls -lahR data/affix/ocr || true
