--- a/.github/workflows/affix_cron.yml
+++ b/.github/workflows/affix_cron.yml
@@ -3,63 +3,38 @@ name: Affix PDFs nightly
 on:
   workflow_dispatch:
   schedule:
-    # 03:10 UTC ≈ 00:10 em Brasília (BRT). Ajuste se quiser outro horário.
-    - cron: '10 3 * * *'
-
-permissions:
-  contents: write
+    - cron: "25 23 * * *"  # seu horário
 
 jobs:
   fetch:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
-          cache: 'pip'
+          python-version: "3.11"
 
-      - name: Install system deps (OCR / PDF)
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y tesseract-ocr poppler-utils
-
-      - name: Install Python deps
+      - name: Install deps
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install requests beautifulsoup4
 
-      - name: Run fetcher (coleta/atualiza PDFs)
+      - name: Fetch Affix PDFs
         env:
-          AFFIX_SOURCES_PATH: scripts/affix_sources.txt
+          AFFIX_ONLY_2025: "1"   # <- ative o filtro 2025 aqui (ou remova para baixar tudo)
         run: |
           python scripts/fetch_affix.py
 
-      - name: Run OCR (thumb + texto do 1º slide)
+      - name: Commit & push if changed
         run: |
-          python scripts/ocr_affix.py
-
-      - name: List outputs (debug)
-        run: |
-          echo "--- MANIFEST ---"
-          test -f data/affix/manifest.json && cat data/affix/manifest.json || echo "manifest.json não existe"
-          echo "--- TREE ---"
-          ls -lahR data/affix || true
-          echo "--- GIT STATUS ---"
-          git status --porcelain || true
-
-      - name: Commit & push changes (if any)
-        run: |
-          set -e
-          if [[ -n "$(git status --porcelain)" ]]; then
-            git config user.name  "github-actions[bot]"
-            git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-            git add -A
+          git config user.name  "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add -A
+          if ! git diff --cached --quiet; then
             git commit -m "chore(affix): nightly fetch $(date -u +'%Y-%m-%d %H:%M UTC')"
             git push
           else
-            echo "Sem mudanças para commitar."
+            echo "Sem alterações."
           fi
