--- a/.github/workflows/affix_cron.yml
+++ b/.github/workflows/affix_cron.yml
@@ -3,48 +3,60 @@ name: Affix PDFs nightly
 on:
   workflow_dispatch:
   schedule:
-    - cron: "25 23 * * *"   # rode todo dia ~20:25 BRT (ajuste se quiser)
+    - cron: "25 23 * * *"  # horário UTC
+
+# necessário para poder dar git push
+permissions:
+  contents: write
 
 jobs:
   fetch:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          # garante histórico completo para poder commitar e fazer push
+          fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      - name: Install Python deps
+      - name: Install deps
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      - name: Install OCR deps (poppler + tesseract)
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y poppler-utils tesseract-ocr
+          pip install requests beautifulsoup4
 
       - name: Fetch Affix PDFs
         env:
-          # deixe "1" para priorizar 2025; remova a var p/ buscar tudo da lista/crawls
+          # deixe "1" para filtrar 2025; troque para "0" (ou remova) se quiser tudo
           AFFIX_ONLY_2025: "1"
         run: |
+          set -e
           python scripts/fetch_affix.py
-
-      - name: Generate OCR thumbs/text
-        run: |
-          python scripts/ocr_affix.py || true
+          echo "---- manifest (primeiras linhas) ----"
+          head -n 80 data/affix/manifest.json || true
 
       - name: Commit & push if changed
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          set -e
+          branch="${GITHUB_REF_NAME:-main}"
+
           git config user.name  "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
+
           git add -A
-          if ! git diff --cached --quiet; then
-            git commit -m "chore(affix): nightly fetch $(date -u +'%Y-%m-%d %H:%M UTC')"
-            git push
-          else
+          if git diff --cached --quiet; then
             echo "Sem alterações."
+            exit 0
           fi
+
+          git commit -m "chore(affix): nightly fetch $(date -u +'%Y-%m-%d %H:%M UTC')"
+
+          # usa URL com token para evitar erro 128 (branch destacado/credenciais)
+          git push "https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git" HEAD:"$branch"
