--- a/.github/workflows/affix_cron.yml
+++ b/.github/workflows/affix_cron.yml
@@ -3,7 +3,7 @@ name: Affix PDFs nightly
 on:
   workflow_dispatch:
   schedule:
-    - cron: "25 23 * * *"  # UTC
+    - cron: "15 6 * * *"  # 06:15 UTC diariamente
 
 permissions:
   contents: write
@@ -14,11 +14,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          persist-credentials: true
 
-      - name: Set up Python
+      - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
@@ -26,31 +23,19 @@ jobs:
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install requests beautifulsoup4 lxml
 
-      - name: Fetch Affix PDFs
-        env:
-          AFFIX_ONLY_2025: "0"   # 1 = filtra só 2025 | 0 = usa tudo do sources
-        run: |
-          python scripts/fetch_affix.py
-
-      # (Opcional) gerar thumb + OCR
-      # - name: OCR thumbs (optional)
-      #   run: |
-      #     sudo apt-get update
-      #     sudo apt-get install -y poppler-utils tesseract-ocr tesseract-ocr-por tesseract-ocr-eng
-      #     python scripts/ocr_affix.py
+      - name: Run crawler
+        run: python scripts/fetch_affix.py
 
       - name: Commit & push if changed
         run: |
           git config user.name  "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git fetch origin main
-          git pull --rebase origin main || true
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add -A
-          if ! git diff --cached --quiet; then
-            git commit -m "chore(affix): nightly fetch $(date -u +'%Y-%m-%d %H:%M UTC')"
-            git push origin HEAD:main
+          if git diff --staged --quiet; then
+            echo "No changes to commit."
           else
-            echo "Sem alterações."
+            git commit -m "chore(affix): update PDFs + manifest [skip ci]"
+            git push
           fi
