--- a/.github/workflows/affix_cron.yml
+++ b/.github/workflows/affix_cron.yml
@@ -20,13 +20,22 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Install deps
+      - name: Install deps (crawler)
         run: |
           python -m pip install --upgrade pip
-          pip install requests beautifulsoup4 lxml
+          pip install -r requirements.txt
+          pip install lxml
 
       - name: Run crawler
         run: python scripts/fetch_affix.py
+
+      # OPCIONAL: gerar thumb/texto via OCR (requer ferramentas nativas)
+      # - name: Install OCR tools
+      #   run: |
+      #     sudo apt-get update
+      #     sudo apt-get install -y poppler-utils tesseract-ocr
+      # - name: Run OCR
+      #   run: python scripts/ocr_affix.py
 
       - name: Commit & push if changed
         run: |
