--- a/data/affix/manifest.json
+++ b/data/affix/manifest.json
@@ -1,5 +1,9 @@
-{
-  "generated_at": "2025-09-24T12:49:28Z",
-  "base": "./data/affix/raw/",
-  "items": []
-}
+name,url,year,state,source
+Affix-Hapvida-Backoffice-Manual-ASSCOMPE-RECIFE-DESCONTO-01-25.pdf,https://www.affix.com.br/wp-content/uploads/2019/03/Affix-Hapvida-Backoffice-Manual-ASSCOMPE-RECIFE-DESCONTO-01-25.pdf,2025,PE,affix
+Affix-MS-Manual-Vendas-Oeste-Saude-08-25.pdf,https://www.affix.com.br/wp-content/uploads/2021/03/Affix-MS-Manual-Vendas-Oeste-Saude-08-25.pdf,2025,MS,affix
+Affix-BA-Manual-Vendas-Plano-Brasil-Saude-02-24.pdf,https://www.affix.com.br/wp-content/uploads/2024/03/Affix-BA-Manual-Vendas-Plano-Brasil-Saude-02-24.pdf,2024,BA,affix
+Affix-SP-Manual-Vendas-Corretor-Ameplan-10-24-1.pdf,https://www.affix.com.br/wp-content/uploads/2021/02/Affix-SP-Manual-Vendas-Corretor-Ameplan-10-24-1.pdf,2024,SP,affix
+Affix-Hapvida-AD-Manual-SALVADOR-11-24-ok.pdf,https://www.affix.com.br/wp-content/uploads/2019/11/Affix-Hapvida-AD-Manual-SALVADOR-11-24-ok.pdf,2024,BA,affix
+Affix-MA-Humana-Manual-Corretor-SAO-LUIS-01-25.pdf,https://www.affix.com.br/wp-content/uploads/2020/11/Affix-MA-Humana-Manual-Corretor-SA%CC%83O-LUIS-01-25.pdf,2025,MA,affix
+Affix-DF-Manual-Corretor-Ideal-Saude-Brasilia-05-24-1.pdf,https://www.affix.com.br/wp-content/uploads/2019/02/Affix-DF-Manual-Corretor-Ideal-Saude-Brasilia-05-24-1.pdf,2024,DF,affix
+Affix-Hapvida-AD-Manual-SAO-JOSE-DOS-CAMPOS-05-24-1.pdf,https://www.affix.com.br/wp-content/uploads/2019/02/Affix-Hapvida-AD-Manual-SAO-JOSE-DOS-CAMPOS-05-24-1.pdf,2024,SP,affix
