--- a/data/affix/manifest.json
+++ b/data/affix/manifest.json
@@ -1,46 +1,16 @@
-{
-  "generated_at": "2025-09-24T16:39:15Z",
-  "base": "./data/affix/raw/",
-  "items": [
-    {
-      "name": "Affix-BA-Manual-Vendas-Plano-Brasil-Saude-02-24.pdf",
-      "size": 1513142,
-      "url": "https://www.affix.com.br/wp-content/uploads/2024/03/Affix-BA-Manual-Vendas-Plano-Brasil-Saude-02-24.pdf"
-    },
-    {
-      "name": "Affix-DF-Manual-Corretor-Ideal-Saude-Brasilia-05-24-1.pdf",
-      "size": 1952808,
-      "url": "https://www.affix.com.br/wp-content/uploads/2019/02/Affix-DF-Manual-Corretor-Ideal-Saude-Brasilia-05-24-1.pdf"
-    },
-    {
-      "name": "Affix-Hapvida-AD-Manual-SALVADOR-11-24-ok.pdf",
-      "size": 2145798,
-      "url": "https://www.affix.com.br/wp-content/uploads/2019/11/Affix-Hapvida-AD-Manual-SALVADOR-11-24-ok.pdf"
-    },
-    {
-      "name": "Affix-Hapvida-AD-Manual-SAO-JOSE-DOS-CAMPOS-05-24-1.pdf",
-      "size": 1307514,
-      "url": "https://www.affix.com.br/wp-content/uploads/2019/02/Affix-Hapvida-AD-Manual-SAO-JOSE-DOS-CAMPOS-05-24-1.pdf"
-    },
-    {
-      "name": "Affix-Hapvida-Backoffice-Manual-ASSCOMPE-RECIFE-DESCONTO-01-25.pdf",
-      "size": 2209576,
-      "url": "https://www.affix.com.br/wp-content/uploads/2019/03/Affix-Hapvida-Backoffice-Manual-ASSCOMPE-RECIFE-DESCONTO-01-25.pdf"
-    },
-    {
-      "name": "Affix-MA-Humana-Manual-Corretor-SA-CC-83O-LUIS-01-25.pdf",
-      "size": 2091396,
-      "url": "https://www.affix.com.br/wp-content/uploads/2020/11/Affix-MA-Humana-Manual-Corretor-SA%CC%83O-LUIS-01-25.pdf"
-    },
-    {
-      "name": "Affix-MS-Manual-Vendas-Oeste-Saude-08-25.pdf",
-      "size": 1847750,
-      "url": "https://www.affix.com.br/wp-content/uploads/2021/03/Affix-MS-Manual-Vendas-Oeste-Saude-08-25.pdf"
-    },
-    {
-      "name": "Affix-SP-Manual-Vendas-Corretor-Ameplan-10-24-1.pdf",
-      "size": 1796840,
-      "url": "https://www.affix.com.br/wp-content/uploads/2021/02/Affix-SP-Manual-Vendas-Corretor-Ameplan-10-24-1.pdf"
-    }
-  ]
-}
+[
+  {
+    "name": "Affix-Hapvida-Backoffice-Manual-ASSCOMPE-RECIFE-DESCONTO-01-25.pdf",
+    "url": "https://www.affix.com.br/wp-content/uploads/2019/03/Affix-Hapvida-Backoffice-Manual-ASSCOMPE-RECIFE-DESCONTO-01-25.pdf",
+    "year": "2019",
+    "state": "PE",
+    "source": "crawl+seed"
+  },
+  {
+    "name": "Affix-MS-Manual-Vendas-Oeste-Saude-08-25.pdf",
+    "url": "https://www.affix.com.br/wp-content/uploads/2021/03/Affix-MS-Manual-Vendas-Oeste-Saude-08-25.pdf",
+    "year": "2025",
+    "state": "MS",
+    "source": "crawl+seed"
+  }
+]
