--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
+  "name": "op_v2",
+  "private": true,
   "type": "module",
   "scripts": {
     "build:index": "node scripts/build-index.mjs"
   },
   "dependencies": {
-    "node-fetch": "3.3.2"
+    "fs-extra": "^11.2.0",
+    "globby": "^14.0.2"
   }
 }
