--- a/.github/workflows/indexer.yml
+++ b/.github/workflows/indexer.yml
@@ -1,4 +1,4 @@
- name: Index PDFs (Affix/Alter) + Deploy
+name: Index PDFs (Affix/Alter) + Deploy
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
       - "scripts/**"
       - ".github/workflows/indexer.yml"
   schedule:
-    - cron: "0 */6 * * *"     # a cada 6h
+    - cron: "0 */6 * * *"   # a cada 6h
   workflow_dispatch:
 
 permissions:
@@ -15,14 +15,9 @@ permissions:
   pages: write
   id-token: write
 
-concurrency:
-  group: "pages"
-  cancel-in-progress: true
-
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    environment: github-pages
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -36,14 +31,18 @@ jobs:
         run: sudo apt-get update && sudo apt-get install -y poppler-utils
 
       - name: Install deps
-        run: |
-          if [ -f package-lock.json ]; then npm ci; else npm i; fi
+        run: npm ci || npm i
 
       - name: Build index (txt + manifest.json)
         run: npm run build:index
 
-      - name: Configure Pages
-        uses: actions/configure-pages@v5
+      - name: Commit updated public/**
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add public
+          git diff --quiet --cached || git commit -m "chore(index): update public index"
+          git push
 
       - name: Upload Pages artifact (public/)
         uses: actions/upload-pages-artifact@v3
